# ZyPlayer

./: .editorconfig  .env  .env.development  .env.example  .eslintignore  .eslintrc  .eslintrc.cjs  .gitattributes  .gitignore  .npmrc  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .prettierrc.yaml  .stylelintignore  .stylelintrc.yml  .yarnclean  .yarnrc  CHANGELOG.md  LICENSE  README.md  RELEASE.md  SECURITY.md  ThirdPartyNotices.txt  app-update.yml  auto-imports.d.ts  commitlint.config.js  components.d.ts  dev-app-update.yml  electron-builder.json5  electron-builder.yml  electron.vite.config.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stylelint.config.js  tsconfig.json  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: commit-msg  pre-commit  prepare-commit-msg
desgin/: player.sketch
design/: player.sketch  video_platform.sketch
docs/: Conventional_Commits.md  Develop.md  HarmonyOS_Electron.md  Loong_Electron.md
electron/: background.ts  preload.d.ts  preload.ts
patches/: @oplayer-core-npm-1.2.38-beta.2-66bf7d6252.patch  @oplayer-torrent-npm-1.2.25-beta.2-6efddccea2.patch  artplayer-npm-5.3.0-fad837bd72.patch  atomically-npm-1.7.0-e742e5293b.patch  dplayer@1.32.7.patch  electron-devtools-installer-npm-4.0.0-ea55a28d94.patch  electron-updater-npm-6.7.0-47b11bb0d4.patch  file-stream-rotator-npm-0.6.1-eab45fb13d.patch  (+2 more)
public/: load.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_launch.rs  main.rs  network.rs
(+1201 files in other folders)
